# when-command

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.txt  REQUIREMENTS.md  ROADMAP.md  appdata.html  cfgform.html  cli.html  cond_actionrelated.html  cond_confluence.html  cond_eventrelated.html  cond_extra01.html  cond_timerelated.html  conditions.html  configfile.html  credits.html  events.html  events_extra01.html  genindex.html  history.html  i18n.html  index.html  install.html  license.html  lua_considerations.html  main.html  objects.inv  output.txt  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  stdeb.cfg  tasks.html  tasks_extra_session.html  (+5 more)
.doctrees/: appdata.doctree  cfgform.doctree  cli.doctree  cond_actionrelated.doctree  cond_confluence.doctree  cond_eventrelated.doctree  cond_extra01.doctree  cond_timerelated.doctree  conditions.doctree  configfile.doctree  credits.doctree  environment.pickle  events.doctree  events_extra01.doctree  history.doctree  i18n.doctree  index.doctree  install.doctree  license.doctree  lua_considerations.doctree  main.doctree  tasks.doctree  tasks_extra_session.doctree  tray.doctree  tutorial.doctree  when_history.doctree
.github/workflows/: documentation.yml
_sources/: appdata.md.txt  cfgform.md.txt  cond_actionrelated.md.txt  cond_eventrelated.md.txt  cond_extra01.md.txt  cond_timerelated.md.txt  conditions.md.txt  configfile.md.txt  credits.md.txt  history.md.txt  i18n.md.txt  index.rst.txt  install.md.txt  lua_considerations.md.txt  main.md.txt  tasks.md.txt  tasks_extra_session.md.txt  tray.md.txt  tutorial.md.txt  when_history.md.txt
lib/: cfgapp.py  icons.py  platform.py  repocfg.py  sgmod.py  trayapp.py  utility.py
lib/configurator/: __init__.py  defaults.py  reader.py  writer.py
lib/extra/: __init__.py  _c_battery_low_win32.py  _template.py  battery_charging_linux.py  battery_charging_win32.py  battery_low_linux.py  battery_low_win32.py  c_battery_charging_linux.py  c_battery_charging_win32.py  c_battery_low_linux.py  c_battery_low_win32.py  c_removabledrive_linux.py  c_removabledrive_win32.py  c_session_locked_win32.py  c_sysload.py  c_sysload_linux.py  c_sysload_win32.py  (+10 more)
lua/: LIBRARY  LIBRARY.md
po/: USAGE.md  es.po  it.po  messages.pot  translate.list
scripts/: when-command
share/: when-command-about.glade  when-command-about.glade.h  when-command-edit-condition.glade  when-command-edit-condition.glade.h  when-command-edit-dbus-signal.glade  when-command-edit-dbus-signal.glade.h  when-command-edit-task.glade  when-command-edit-task.glade.h  when-command-settings.glade  when-command-settings.glade.h  when-command-task-history.glade  when-command-task-history.glade.h
support/: append_icon.py  build_html.py  mcrt_lib.lua  update_version.lua  updatever.lua
support/i18n/: README.md  pyproject.toml  translate.ipynb
support/i18n/INPUT/: placeholder.txt
support/i18n/TEMP/: strings.py
when/: when.py  when_bg.pyw
(+188 files in other folders)
