[tool.poetry]
name = "when"
version = "1.10.12b7"
description = "Interface for the **whenever** automation tool"
authors = ["Francesco Garosi <francesco.garosi@gmail.com>"]
license = 'BSD 3-Clause "New" or "Revised" License'
readme = "README.md"
packages = [
    { include = "lib" },
    { include = "when" },
]

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.13.3"
requests = "^2.32.3"
pystray = "^0.19.5"
pillow = "^10.3.0"
darkdetect = "^0.8.0"
Pygments = "^2.19.1"
tklinenums = "^1.7.1"
chlorophyll = "^0.4.2"
ttkbootstrap = "^1.10.1"
tkhtmlview = "^0.3.1"
rich = "^13.9.4"
dbus-python = { version = "^1.3.2", markers = "sys_platform == 'linux'" }
# pygobject = { version = "^3.52.2", markers = "sys_platform == 'linux'" }
pygobject = { version = "3.50.0", markers = "sys_platform == 'linux'" }
winshell = { version = "^0.6", markers = "sys_platform == 'win32'" }
pywin32 = { version = "^308", markers = "sys_platform == 'win32'" }

[tool.poetry.scripts]
when = "when.when:main"
when-bg = "when.when_bg:run_bg"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
