[tool.poetry]
name = "when"
version = "1.13.4b2"
description = "Interface for the **whenever** automation tool"
authors = ["Francesco Garosi <francesco.garosi@gmail.com>"]
license = 'BSD 3-Clause "New" or "Revised" License'
readme = "README.md"
packages = [
    { include = "lib" },
    { include = "when" },
]

[tool.poetry.dependencies]
python = "^3.10"
chlorophyll = "^0.4.2"
dbus-python = { version = "^1.3.2", markers = "sys_platform == 'linux'" }
pillow = "^10.4.0"
darkdetect = "^0.8.0"
Pygments = "^2.19.2"
pygobject = { version = "3.50.0", markers = "sys_platform == 'linux'" }
# pygobject = { version = "^3.52.2", markers = "sys_platform == 'linux'" }
pystray = "^0.19.5"
pywin32 = { version = "^308", markers = "sys_platform == 'win32'" }
requests = "^2.32.5"
rich = "^13.9.4"
semver = "^3.0.4"
tklinenums = "^1.7.1"
tkhtmlview = "^0.3.1"
tomlkit = "^0.13.3"
tomlkit-extras = "^0.2.0"
ttkbootstrap = "^1.20.0"
ttkbootstrap-icons = "^3.2.0"
ttkbootstrap-icons-mat = "^1.0.0"
winshell = { version = "^0.6", markers = "sys_platform == 'win32'" }
wmi = { version = "^1.5.1", markers = "sys_platform == 'win32'" }

[tool.poetry.scripts]
when = "when.when:main"
when-bg = "when.when_bg:run_bg"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["E402", "F403", "F405"]
